--- a/simulations-java/simulations/motion-series/data/motion-series/localization/motion-series-strings_mk.properties
+++ b/simulations-java/simulations/motion-series/data/motion-series/localization/motion-series-strings_mk.properties
@@ -1,5 +1,5 @@
-#motion-series-strings_mk.properties created Mon Jan 30 12:54:36 CET 2012 using: motion-series 2.03.00 (57799), translation-utility 2.13.00 (59150) \u0434\u0435\u043A\u0435\u043C. 8, 2011
-#Mon Jan 30 12:54:36 CET 2012
+#motion-series-strings_mk.properties created Thu Feb 07 09:14:48 CET 2013 using: motion-series 2.06.00 (70004), translation-utility 2.14.00 (69024) \u043E\u043A\u0442. 9, 2012
+#Thu Feb 07 09:14:48 CET 2013
 property.ramp-angle=\u0410\u0433\u043E\u043B \u043D\u0430 \u0440\u0430\u043C\u043F\u0430
 game.summary.pattern.result-score=\= {0} \u043F\u043E\u0435\u043D\u0438
 properties.position=\u041F\u043E\u0437\u0438\u0446\u0438\u0458\u0430
@@ -73,7 +73,7 @@ game.summary.pattern.earned-energy-points=\= {0} \u043F\u043E\u0435\u043D\u0438
 properties.acceleration.units=m/s\u00B2
 normalForce=\u041D\u043E\u0440\u043C\u0430\u043B\u043D\u0430 \u0441\u0438\u043B\u0430
 units.sec=\u0441\u0435\u043A.
-walls.brick=\u0426\u0438\u0433\u043B\u0430
+walls.brick=\u0422\u0443\u043B\u0430
 forces.sum=\u0417\u0431\u0438\u0440
 frictionForce=\u0421\u0438\u043B\u0430 \u043D\u0430 \u0442\u0440\u0438\u0435\u045A\u0435
 controls.friction=\u0422\u0440\u0438\u0435\u045A\u0435
@@ -88,7 +88,7 @@ force.abbrev.applied=a
 controls.show=\u041F\u0440\u0438\u043A\u0430\u0436\u0438
 object.custom.description.html.pattern.name=<html>{0}</html>
 forces.friction=\u0422\u0440\u0438\u0435\u045A\u0435
-translation.credits=\u0421\u0430\u0448\u0430 \u0421\u0442\u0430\u043C\u0435\u043D\u043A\u043E\u0432\u0441\u043A\u0438
+translation.credits=\u0417\u043E\u0440\u0430\u043D \u0425\u0440\u0438\u0441\u0442\u043E\u0432\u0441\u043A\u0438
 vectors.sum-of-forces=\u0417\u0431\u0438\u0440 \u043D\u0430 \u0441\u0438\u043B\u0438
 game.intro.motto-text=<html>\u041F\u0440\u0438\u043C\u0435\u043D\u0438 \u0441\u0438\u043B\u0430<br>\u0418\u0441\u043F\u043E\u0440\u0430\u0447\u0430\u0458 \u0442\u0435\u043B\u043E<br>\u041F\u0440\u0435\u043E\u0441\u0442\u0430\u043D\u0430\u0442\u0430 \u0435\u043D\u0435\u0440\u0433\u0438\u0458\u0430 \= \u041F\u043E\u0435\u043D\u0438</html>
 game.instructions.press-arrow-keys=\u041F\u0440\u0438\u0442\u0438\u0441\u043D\u0438 \u0433\u0438 \u043A\u043E\u043F\u0447\u0438\u045A\u0430\u0442\u0430 \u043E\u0437\u043D\u0430\u0447\u0435\u043D\u0438 \u0441\u043E \u0441\u0442\u0440\u0435\u043B\u043A\u0438
