--- a/simulations-java/simulations/line-graphing/data/line-graphing/localization/line-graphing-strings_da.properties
+++ b/simulations-java/simulations/line-graphing/data/line-graphing/localization/line-graphing-strings_da.properties
@@ -1,6 +1,6 @@
-#line-graphing-strings_da.properties created Fri Feb 08 15:18:08 CET 2013 using: line-graphing 1.00.00 (72068), translation-utility 2.14.00 (69024) okt 9, 2012
-#Fri Feb 08 15:18:08 CET 2013
-lineToGraph=Linie til graf\:
+#line-graphing-strings_da.properties created Sun Feb 10 11:32:15 CET 2013 using: line-graphing 1.00.00 (72068), translation-utility 2.14.00 (69024) okt 9, 2012
+#Sun Feb 10 11:32:15 CET 2013
+lineToGraph=Forskrift til ret linie\:
 saveLine=Gem linie
 setThePoint=Indstil punktet
 yourLine=Din linie\:
@@ -8,16 +8,16 @@ slopeIs={0} er
 undefined=udefinerede
 notALine=.....er ikke en linie.
 graphTheLine=Tegn linien
-tab.slopeIntercept=H\u00E6ldningskofficient
+tab.slopeIntercept=Sk\u00E6ring-h\u00E6ldningskofficient
 symbol.intercept=b
 slope=H\u00E6ldning
 tab.lineGame=Liniespil
-putPointsOnLine=S\u00E6t tal p\u00E5 en linie
+putPointsOnLine=S\u00E6t punkterne p\u00E5 en ret linie
 slopeUndefined={0}\={1} (h\u00E6ldning udefineret)
 makeTheEquation=Lav ligningen
 hideLines=Fjern linier
 tab.slope=H\u00E6ldning
-tab.pointSlope=Punkt-h\u00E6ldning
+tab.pointSlope=H\u00E6ldningstallet
 pointsAwarded=+{0}
 point.unknown=( ?, ? )
 symbol.slope=a
@@ -29,4 +29,4 @@ setTheSlope=Indstil h\u00E6ldningen
 aCorrectEquation=En rigtig ligning\:
 point.xy=({0}, {1})
 setTheYIntercept=Indstil sk\u00E6ringspunkt med Y-aksen
-graphing-lines.name=Graftegning af linier
+graphing-lines.name=Tegning af rette linier
