--- a/trunk/simulations-java/common/phetcommon/data/phetcommon/localization/phetcommon-strings_hu.properties
+++ b/trunk/simulations-java/common/phetcommon/data/phetcommon/localization/phetcommon-strings_hu.properties
@@ -1,5 +1,5 @@
-#phetcommon-strings_hu.properties created Thu Jul 12 12:00:44 CEST 2012 using: java-common-strings 1.24.00 (65672), translation-utility 2.13.00 (59150) Dec 8, 2011
-#Thu Jul 12 12:00:44 CEST 2012
+#phetcommon-strings_hu.properties created Sat Feb 09 07:30:26 CET 2013 using: java-common-strings 1.25.00 (71939), translation-utility 2.14.00 (69024) okt. 9, 2012
+#Sat Feb 09 07:30:26 CET 2013
 Games.label.level=Szint\: {0}
 Common.updates.errorMessage=Friss\u00EDt\u00E9s k\u00F6zben hiba t\u00F6rt\u00E9nt. Pr\u00F3b\u00E1lkozzon <br>k\u00E9s\u0151bb vagy l\u00E1togasson ide\: {0}.
 XMLPersistenceManager.save.error.encode=<html>K\u00F3dol\u00E1si hiba\:<br>{0}</html>
@@ -35,6 +35,7 @@ Common.statistics.sim_deployment=Felhaszn\u00E1l\u00E1s t\u00EDpusa\:
 Common.FileMenu.Save=Konfigur\u00E1ci\u00F3 ment\u00E9se...
 Common.About.CreditsDialog.licenseDetails=A licenc r\u00E9szletei
 Games.radioButton.on=be
+Games.check=Ellen\u0151rz\u00E9s
 FileChooser.acceptAllFileFilterText=Minden f\u00E1jl (*.*)
 Common.FileMenu.Preferences=Be\u00E1ll\u00EDt\u00E1sok...
 Common.FileMenu.Load=Konfigur\u00E1ci\u00F3 bet\u00F6lt\u00E9se...
@@ -49,6 +50,7 @@ Games.title.gameOver=J\u00E1t\u00E9k v\u00E9ge
 FileChooser.filesOfTypeLabelText=F\u00E1jlt\u00EDpus\:
 Common.ErrorDialog.detailsTitle=A hiba r\u00E9szletez\u00E9se
 Common.HelpMenu.MegaHelp=S\u00DAG\u00D3
+Games.next=A k\u00F6vetkez\u0151t
 Common.ClockControlPanel.Step=L\u00E9ptet
 Common.statistics.sim_revision=Szimul\u00E1ci\u00F3verzi\u00F3 (jav\u00EDt\u00E1s)\:
 Common.choice.yes=Igen
@@ -74,6 +76,7 @@ ColorChooser.previewText=E\u0151n\u00E9zet
 Common.BasicPhetPanel.Title=Vissza
 Common.HelpPanel.HideHelp=S\u00FAg\u00F3 elrejt\u00E9se
 Common.statistics.host_os_arch=Processzort\u00EDpus\:
+Lwjgl.macJava17Message=<html><body><p>Ez a szimul\u00E1ci\u00F3 LWJGL-t haszn\u00E1l a 3D grafik\u00E1hoz. Sajnos, az LWJGL jelenleg nem t\u00E1mogatja <br/>a Java 7-et a Mac OSX rendszeren. Nem tudni, hogy az LWJGL megoldja-e ezt a probl\u00E9m\u00E1t.</p><p>Ha azt akarja, hogy fusson a szimul\u00E1ci\u00F3, <a href\="{0}">l\u00E9pjen vissza a Jav\u00E1val a 6-os verzi\u00F3ra</a>.</p></body></html>
 Common.preferences.title=Be\u00E1ll\u00EDt\u00E1sok
 Games.button.newGame=\u00DAj j\u00E1t\u00E9k
 Common.ModelSlider.YouEntered=Bel\u00E9pett
@@ -84,6 +87,7 @@ Common.statistics.sim_project=Projekt neve\:
 Common.title.message=\u00DCzenet
 Common.updates.downloadingBootstrap=friss\u00EDt\u0151 let\u00F6lt\u00E9se...
 Common.title.error=Hiba
+Games.showAnswer=Mutasd a v\u00E1laszt
 Common.FileMenu.Exit=Kil\u00E9p\u00E9s
 Common.statistics.sim_major_version=Szimul\u00E1ci\u00F3verzi\u00F3 (major)\:
 Common.updates.askMeLater=K\u00E9rdezz m\u00E1skor
@@ -166,6 +170,7 @@ message.valueOutOfRange=Az \u00E9rt\u00E9knek {0} \u00E9s {1} k\u00F6z\u00E9 kel
 Common.updates.updateToDate=Naprak\u00E9sz
 Common.ClockControlPanel.Pause=Pillanat \u00E1llj
 PhetApplication.StartupDialog.message="{0}" ind\u00EDt\u00E1s alatt
+Games.tryAgain=\u00DAj pr\u00F3b\u00E1lkoz\u00E1s
 Common.About.CreditsDialog.UsesThirdPartySoftware=A program a k\u00F6vetkez\u0151 idegen szoftvereket haszn\u00E1lja
 XMLPersistenceManager.message.notAConfigFile=Ez a f\u00E1jl nem tartalmaz konfigur\u00E1ci\u00F3t ehhez a szimul\u00E1ci\u00F3hoz.
 Common.preferences.updates=Friss\u00EDt\u00E9sek
@@ -189,4 +194,5 @@ Common.updates.youHaveCurrent=\u00D6nnek {1} legfrissebb verzi\u00F3ja ({0}) van
 charts.show-graphs=Grafikonok mutat\u00E1sa\:
 Common.statistics.host_java_vendor=Java-forgalmaz\u00F3\:
 Common.statistics.sim_sessions_since=A szimul\u00E1ci\u00F3 futtat\u00E1sainak sz\u00E1ma az utols\u00F3 onl\u00E1jn kapcsolat \u00F3ta\:
+Sponsor.sinceDate=({0} \u00F3ta)
 Common.statistics.message_type=\u00DCzenett\u00EDpus\:
