--- a/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_de.properties
+++ b/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_de.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_de.properties created Thu Jan 10 10:24:12 CET 2013 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) Okt 9, 2012
-#Thu Jan 10 10:24:12 CET 2013
+#forces-and-motion-basics-strings_de.properties created Mon Feb 11 22:56:15 CET 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) Okt 9, 2012
+#Mon Feb 11 22:56:15 CET 2013
 none=keine
 force=Kraft
 values=Werte
@@ -8,11 +8,13 @@ redWins=Rot gewinnt\!
 frictionForce=Reibungskraft
 pause=Pause
 friction=Reibung
+accelerationLab=Beschleunigungslabor
 forces-and-motion-basics.name=Kr\u00E4fte und Bewegung\: Grundlagen
 appliedForce=ausge\u00FCbte Kraft
 leftForce=Kraft nach links
 rightForce=Kraft nach rechts
 massDisplay.pattern={0} kg
+acceleration=Beschleunigung
 sound=Ton
 lots=viel
 forces=Kr\u00E4fte
