--- a/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_es_PE.properties
+++ b/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_es_PE.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_es_PE.properties created Wed Oct 24 21:01:26 COT 2012 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) oct 9, 2012
-#Wed Oct 24 21:01:26 COT 2012
+#forces-and-motion-basics-strings_es_PE.properties created Mon Feb 11 18:17:20 COT 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) oct 9, 2012
+#Mon Feb 11 18:17:20 COT 2013
 none=Nada
 force=Fuerza
 values=Valores
@@ -8,11 +8,13 @@ redWins=\u00A1Ganan los rojos\!
 frictionForce=Fuerza de Fricci\u00F3n
 pause=Pausa
 friction=Fricci\u00F3n
+accelerationLab=Laboratorio de Aceleraci\u00F3n
 forces-and-motion-basics.name=Fuerzas y Movimiento\:Fundamentos
 appliedForce=Fuerza Aplicada
 leftForce=Fuerza Izquierda
 rightForce=Fuerza Derecha
 massDisplay.pattern={0} kg
+acceleration=Aceleraci\u00F3n
 sound=Sonido
 lots=Mucho
 forces=Fuerzas
