--- a/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_hu.properties
+++ b/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_hu.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_hu.properties created Sat Nov 10 09:00:13 CET 2012 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) okt. 9, 2012
-#Sat Nov 10 09:00:13 CET 2012
+#forces-and-motion-basics-strings_hu.properties created Tue Feb 12 06:15:10 CET 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) okt. 9, 2012
+#Tue Feb 12 06:15:10 CET 2013
 none=nincs
 force=Er\u0151
 values=er\u0151\u00E9rt\u00E9kkel
@@ -8,10 +8,13 @@ redWins=Gy\u0151z\u00F6tt a piros\!
 frictionForce=S\u00FArl\u00F3d\u00E1si er\u0151
 pause=\u00C1llj\!
 friction=S\u00FArl\u00F3d\u00E1s
+accelerationLab=Gyorsul\u00E1s labor
 forces-and-motion-basics.name=Er\u0151k \u00E9s mozg\u00E1s - alapok
 appliedForce=Alkalmazott er\u0151
 leftForce=Balra mutat\u00F3 er\u0151
 rightForce=Jobbra mutat\u00F3 er\u0151
+massDisplay.pattern={0} kg
+acceleration=Gyorsul\u00E1s
 sound=Hanggal
 lots=j\u00F3 nagy
 forces=Er\u0151k
@@ -27,3 +30,4 @@ return=Vissza\!
 translation.credits=<html><a href\="http\://nagysandor.eu/">Nagy S\u00E1ndor</a><br>ELTE, <a href\="http\://www.chem.elte.hu/pr/">K\u00E9miai Int\u00E9zet</a>, Budapest</html>
 newtons=newton
 masses=T\u00F6megek
+forceReadout.pattern={0} N
