--- a/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_nl.properties
+++ b/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_nl.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_nl.properties created Sun Feb 03 14:44:53 CET 2013 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) okt 9, 2012
-#Sun Feb 03 14:44:53 CET 2013
+#forces-and-motion-basics-strings_nl.properties created Mon Feb 11 22:35:46 CET 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) okt 9, 2012
+#Mon Feb 11 22:35:46 CET 2013
 none=geen
 force=kracht
 values=waarden
@@ -8,12 +8,15 @@ redWins=Rood wint\!
 frictionForce=wrijvingskracht
 pause=Pauze
 friction=Wrijving
+accelerationLab=Versnelling
 forces-and-motion-basics.name=Kracht en beweging\: basis
 appliedForce=aangewende kracht
 leftForce=Kracht naar links
 rightForce=Kracht naar rechts
 massDisplay.pattern={0} kg
+acceleration=versnelling
 sound=geluid
+lots=veel
 forces=krachten
 tugOfWar=Touwtrekken
 motion=Beweging
@@ -24,6 +27,7 @@ blueWins=Blauw wint\!
 sumOfForces=som van de krachten
 speed=snelheid
 return=Opnieuw
+translation.credits=Koen Pieters
 newtons=Newton
 masses=massa's
 forceReadout.pattern={0} N
