--- a/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_pl.properties
+++ b/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_pl.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_pl.properties created Sat Oct 27 09:34:21 CEST 2012 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) pa\u017A 9, 2012
-#Sat Oct 27 09:34:21 CEST 2012
+#forces-and-motion-basics-strings_pl.properties created Tue Feb 12 10:34:59 CET 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) pa\u017A 9, 2012
+#Tue Feb 12 10:34:59 CET 2013
 none=brak
 force=Si\u0142a
 values=Warto\u015Bci
@@ -8,10 +8,12 @@ redWins=Czerwony wygrywa\!
 frictionForce=Si\u0142a tarcia
 pause=Pauza
 friction=Tarcie
+accelerationLab=Przyspieszenia - Laboratorium
 forces-and-motion-basics.name=Si\u0142y i ruch\: Podstawy
 appliedForce=Przy\u0142o\u017Cona si\u0142a
 leftForce=Si\u0142a z lewej
 rightForce=Si\u0142a z prawej
+acceleration=Przyspieszenie
 sound=D\u017Awi\u0119k
 lots=du\u017Ce
 forces=Si\u0142y
