--- a/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_sk.properties
+++ b/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_sk.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_sk.properties created Mon Oct 29 17:57:52 CET 2012 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) okt 9, 2012
-#Mon Oct 29 17:57:52 CET 2012
+#forces-and-motion-basics-strings_sk.properties created Mon Feb 11 21:50:11 CET 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) okt 9, 2012
+#Mon Feb 11 21:50:11 CET 2013
 none=\u017Diadne
 force=Sila
 values=Ve\u013Ekos\u0165
@@ -8,11 +8,13 @@ redWins=\u010Cerven\u00ED zv\u00ED\u0165azili\!
 frictionForce=Trecia sila
 pause=Stop
 friction=Trenie
+accelerationLab=Zmena r\u00FDchlosti
 forces-and-motion-basics.name=Sila a pohyb\: Z\u00E1kladn\u00FD kurz
 appliedForce=P\u00F4sobiaca sila
 leftForce=Sila v\u013Eavo
 rightForce=Sila vpravo
 massDisplay.pattern={0} kg
+acceleration=Zr\u00FDchlenie
 sound=Zvuk
 lots=Ve\u013Ek\u00E9
 forces=Sily
