--- a/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_sr.properties
+++ b/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_sr.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_sr.properties created Fri Oct 26 17:01:44 CEST 2012 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) Oct 9, 2012
-#Fri Oct 26 17:01:44 CEST 2012
+#forces-and-motion-basics-strings_sr.properties created Mon Feb 11 21:22:19 CET 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.13.00 (59150) Dec 8, 2011
+#Mon Feb 11 21:22:19 CET 2013
 none=\u0431\u0435\u0437
 force=\u0421\u0438\u043B\u0430
 values=\u0432\u0440\u0435\u0434\u043D\u043E\u0441\u0442\u0438
@@ -8,10 +8,12 @@ redWins=\u041F\u043E\u0431\u0435\u0434\u0438\u043B\u0438 "\u0426\u0440\u0432\u04
 frictionForce=\u0421\u0438\u043B\u0430 \u0442\u0440\u0435\u045A\u0430
 pause=\u041F\u0430\u0443\u0437\u0430
 friction=\u0422\u0440\u0435\u045A\u0435
+accelerationLab=\u041B\u0430\u0431\u043E\u0440\u0430\u0442\u043E\u0440\u0438\u0458\u0430 \u0437\u0430 \u0443\u0431\u0440\u0437\u0430\u045A\u0435
 forces-and-motion-basics.name=\u0421\u0438\u043B\u0435 \u0438 \u043A\u0440\u0435\u0442\u0430\u045A\u0435 - \u041E\u0441\u043D\u043E\u0432\u0435
 appliedForce=\u041F\u0440\u0438\u043C\u0435\u045A\u0435\u043D\u0430 \u0441\u0438\u043B\u0430
 leftForce=\u0441\u0438\u043B\u0430 \u043D\u0430\u043B\u0435\u0432\u043E
 rightForce=\u0441\u0438\u043B\u0430 \u043D\u0430\u0434\u0435\u0441\u043D\u043E
+acceleration=\u0443\u0431\u0440\u0437\u0430\u045A\u0435
 sound=\u0437\u0432\u0443\u043A
 lots=\u043C\u043D\u043E\u0433\u043E
 forces=\u0421\u0438\u043B\u0435
