--- a/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_vi.properties
+++ b/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/localization/forces-and-motion-basics-strings_vi.properties
@@ -1,5 +1,5 @@
-#forces-and-motion-basics-strings_vi.properties created Fri Oct 26 18:58:32 ICT 2012 using: forces-and-motion-basics 1.00.00 (69441), translation-utility 2.14.00 (69024) thg 10 10, 2012
-#Fri Oct 26 18:58:32 ICT 2012
+#forces-and-motion-basics-strings_vi.properties created Tue Feb 12 12:05:55 ICT 2013 using: forces-and-motion-basics 1.02.00 (72090), translation-utility 2.14.00 (69024) thg 10 10, 2012
+#Tue Feb 12 12:05:55 ICT 2013
 none=Kh\u00F4ng
 force=L\u1EF1c
 values=Tr\u1ECB s\u1ED1
@@ -8,11 +8,13 @@ redWins=\u0110\u1ECF th\u1EAFng\!
 frictionForce=L\u1EF1c ma s\u00E1t
 pause=D\u1EEBng
 friction=Ma s\u00E1t
+accelerationLab=PTN gia t\u1ED1c
 forces-and-motion-basics.name=L\u1EF1c v\u00E0 chuy\u1EC3n \u0111\u1ED9ng\: Nh\u1EEFng \u0111i\u1EC1u c\u01A1 b\u1EA3n
 appliedForce=L\u1EF1c t\u00E1c d\u1EE5ng
 leftForce=L\u1EF1c b\u00EAn tr\u00E1i
 rightForce=L\u1EF1c b\u00EAn ph\u1EA3i
 massDisplay.pattern={0}kg
+acceleration=Gia t\u1ED1c
 sound=\u00C2m thanh
 lots=Nhi\u1EC1u
 forces=L\u1EF1c
